trying to fix year output, debugging on mobile

--- a/datepicker/datepickerStyle.css
+++ b/datepicker/datepickerStyle.css
@@ -182,7 +182,7 @@ body {
   }
   .close {
     top: 12px;
-    right: 12px;
+    right: 2px;
   }
 }
 
